--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
 		"format": "bunx biome format --write ."
 	},
 	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.11",
+		"@radix-ui/react-label": "^2.1.4",
 		"@radix-ui/react-slot": "^1.2.0",
+		"@radix-ui/react-tabs": "^1.1.9",
+		"@supabase/auth-helpers-nextjs": "latest",
+		"@supabase/ssr": "latest",
+		"@supabase/supabase-js": "latest",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.488.0",
 		"motion": "^12.7.4",
 		"next": "15.2.4",
+		"next-themes": "^0.4.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"sonner": "^2.0.3",
 		"tailwind-merge": "^3.1.0",
 		"tw-animate-css": "^1.2.5"
 	},
