--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"react-dom": "^19.0.0",
 		"sonner": "^2.0.3",
 		"tailwind-merge": "^3.1.0",
-		"tw-animate-css": "^1.2.5"
+		"tw-animate-css": "^1.2.5",
+		"zustand": "^5.0.4"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
